# jadesoul

./: ProjectHome.md  README.txt  main.cpp  stdout.txt
acm-center/LCS最大公共字串/: LCS.cpp
acm-center/poj/: 1000.cpp  1000_test.cpp  1001.cpp  1001_2.cpp  1001_data.txt  1002.in  1004.cpp  1141.py  1141_2.cpp  1141_o1.cpp  1922.cmd  1922.cpp  1922.txt  1922_v2.cpp  test.cpp
acm-center/百度之星/: 百度之星历年赛题.doc  百度赛题.doc
apps/go/: readme.txt
apps/othello/: engine.cpp  othello.cpp  othello.hpp  recv.txt
apps/reversi/: AI.cpp  AI.h  ComputerPlayer.cpp  ComputerPlayer.h  Game.cpp  Game.h  Gene.cpp  Gene.h  Grid.cpp  Grid.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  Round.cpp  Round.h  StdAfx.h  Step.cpp  Step.h  for_engine.cpp  for_engine_main.cpp  for_odk.cpp  globaldata.h  openglgui.h  stdafx.cpp  (+1 more)
includes/: all.hpp  gl.hpp  graph.hpp  jade.hpp  jade_algorithm.hpp  jade_all_tests.hpp  jade_classes.hpp  jade_common.hpp  jade_objectworld.hpp  jade_opengl_test.hpp  jade_types.hpp  jade_utils.hpp  jadesoul  jadesoul.hpp  ml.hpp
test-center/: enlerpath.cpp  zhoucuo.cpp
test-gl/: glpainter.cpp  glvisualdata.cpp  glvisualdata.txt  main  main.cpp  test.cpp
test-graph/: graph_main.cpp
test-jade/: jade_main.cpp
test-jadesoul/: jadesoul.hpp  jadesoul_main.cpp  objectworld.cpp  pypp.hpp
test-ml/: dataset.txt  main.cpp  ml_classify.hpp  ml_cluster_kmeans.hpp  ml_main.cpp
tests/: all.cpp  gl.cpp  graph.cpp  jade.cpp  jadesoul.cpp  jadesoul_old.cpp  ml.cpp
tests/other/opencv/: CMakeLists.txt  photo_cut.cpp  run-build.cmd
tools/: del_all_obj_and_exe.py
(+506 files in other folders)
